# python-project-49

./: Makefile  README.md  brein-game-calc.cast  demo.cast  even_game.cast  game-calc.cast  game-gcd.cast  games-calc.cast  gcd_game.cast  prime_game.cast  progression_game.cast  pyproject.toml
brain_games/: cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  script_brain_calc.py  script_brain_even.py  script_brain_gcd.py  script_brain_prime.py  script_brain_progression.py
brain_games/scripts/functions/: func.py  script_brain_calc.py  script_brain_even.py  script_brain_gcd.py  script_brain_prime.py  script_brain_progression.py
brain_games/scripts/games/: __init__.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
