[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "collection of math games"
authors = ["Eagle <sys-leek@mail.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/Orloff-Star/python-project-49.git"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.functions.script_brain_even:main"
brain-calc = "brain_games.scripts.functions.script_brain_calc:main"
brain-gcd = "brain_games.scripts.functions.script_brain_gcd:main"
brain-progression = "brain_games.scripts.functions.script_brain_progression:main"
brain-prime = "brain_games.scripts.functions.script_brain_prime:main"
